--- a/FynzoSurvey/Storyboard/Authentication.storyboard
+++ b/FynzoSurvey/Storyboard/Authentication.storyboard
@@ -274,6 +274,8 @@
                     </view>
                     <navigationItem key="navigationItem" id="l32-UE-Yv6"/>
                     <connections>
+                        <outlet property="createAccountButton" destination="HEE-AQ-cUv" id="ILv-Tw-1L7"/>
+                        <outlet property="forgotPasswordButton" destination="0UU-kx-K90" id="9dG-eC-IXg"/>
                         <outlet property="headerView" destination="rhS-ng-0hc" id="r7R-ZD-edP"/>
                         <outlet property="signInButton" destination="rzv-hI-o5h" id="cXe-sf-w1q"/>
                         <outlet property="tableView" destination="GEI-C6-lFV" id="1ZM-Wt-kBl"/>
@@ -318,7 +320,7 @@
                                     </constraints>
                                 </view>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="zVb-5r-Mbv">
-                                    <rect key="frame" x="0.0" y="190" width="375" height="320"/>
+                                    <rect key="frame" x="0.0" y="190" width="375" height="370"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="y3R-2e-Yll">
