feature: FormViewController: worked on ui.

--- a/FynzoSurvey/Storyboard/Home.storyboard
+++ b/FynzoSurvey/Storyboard/Home.storyboard
@@ -17,13 +17,154 @@
                     <view key="view" contentMode="scaleToFill" id="3bx-xW-vGf">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dAO-M4-IO9">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="V0q-GS-JIV" id="Ev5-lz-9Yd"/>
+                                    <outlet property="delegate" destination="V0q-GS-JIV" id="elO-XN-5HS"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Gxr-YA-OJQ" firstAttribute="bottom" secondItem="dAO-M4-IO9" secondAttribute="bottom" id="5qp-jn-UVL"/>
+                            <constraint firstItem="Gxr-YA-OJQ" firstAttribute="trailing" secondItem="dAO-M4-IO9" secondAttribute="trailing" id="K28-p1-Fwh"/>
+                            <constraint firstItem="dAO-M4-IO9" firstAttribute="leading" secondItem="Gxr-YA-OJQ" secondAttribute="leading" id="Zdl-RD-zhs"/>
+                            <constraint firstItem="dAO-M4-IO9" firstAttribute="top" secondItem="Gxr-YA-OJQ" secondAttribute="top" id="sbj-Kk-qrg"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Gxr-YA-OJQ"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="dAO-M4-IO9" id="Fnw-R9-SYa"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="otV-Gb-ewT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="75" y="115"/>
         </scene>
+        <!--Form View Controller-->
+        <scene sceneID="tI4-ht-CSc">
+            <objects>
+                <viewController storyboardIdentifier="FormViewController" id="bZU-e2-4UM" customClass="FormViewController" customModule="FynzoSurvey" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="n5r-Wz-mjE">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.65000000000000002" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="form_background" translatesAutoresizingMaskIntoConstraints="NO" id="Afg-r1-Llu">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nog-bE-7P1">
+                                <rect key="frame" x="0.0" y="44" width="414" height="70"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="fQV-fC-h4V">
+                                        <rect key="frame" x="0.0" y="0.0" width="135" height="70"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CVE-8K-5Us" customClass="FormButton" customModule="FynzoSurvey" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="135" height="70"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <state key="normal" title="PREVIOUS"/>
+                                                <connections>
+                                                    <action selector="previousButtonAction" destination="bZU-e2-4UM" eventType="touchUpInside" id="sbb-gp-8tn"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="70" id="sb7-8s-n0E"/>
+                                            <constraint firstAttribute="width" constant="135" id="vuq-zu-529"/>
+                                        </constraints>
+                                    </stackView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileImage" translatesAutoresizingMaskIntoConstraints="NO" id="y8G-jV-l5M">
+                                        <rect key="frame" x="172" y="0.0" width="70" height="70"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="70" id="ARy-8U-sPK"/>
+                                            <constraint firstAttribute="height" constant="70" id="MfF-dp-yy6"/>
+                                        </constraints>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="cac-IZ-YBP">
+                                        <rect key="frame" x="344" y="0.0" width="70" height="70"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PWv-AS-Urs" customClass="FormButton" customModule="FynzoSurvey" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
+                                                <state key="normal" title="NEXT"/>
+                                                <connections>
+                                                    <action selector="nextButtonAction" destination="bZU-e2-4UM" eventType="touchUpInside" id="MAv-Lr-CZW"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="70" id="F7M-sp-DN6"/>
+                                            <constraint firstAttribute="height" constant="70" id="Ole-4K-OM9"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="fQV-fC-h4V" firstAttribute="centerY" secondItem="nog-bE-7P1" secondAttribute="centerY" id="22M-vh-T7p"/>
+                                    <constraint firstItem="y8G-jV-l5M" firstAttribute="centerY" secondItem="nog-bE-7P1" secondAttribute="centerY" id="6es-7Q-ab7"/>
+                                    <constraint firstAttribute="height" constant="70" id="cLd-4z-CAR"/>
+                                    <constraint firstAttribute="trailing" secondItem="cac-IZ-YBP" secondAttribute="trailing" id="f1Q-Gu-0dO"/>
+                                    <constraint firstItem="y8G-jV-l5M" firstAttribute="centerX" secondItem="nog-bE-7P1" secondAttribute="centerX" id="q3r-IY-hSd"/>
+                                    <constraint firstItem="cac-IZ-YBP" firstAttribute="centerY" secondItem="nog-bE-7P1" secondAttribute="centerY" id="qeo-W3-Y0f"/>
+                                    <constraint firstItem="fQV-fC-h4V" firstAttribute="leading" secondItem="nog-bE-7P1" secondAttribute="leading" id="vf3-7m-2MA"/>
+                                </constraints>
+                            </view>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="zyE-JS-g2v">
+                                <rect key="frame" x="0.0" y="124" width="414" height="738"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Xzw-mp-SYi">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="JEt-gt-sfw">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="bZU-e2-4UM" id="xuT-j7-wpY"/>
+                                    <outlet property="delegate" destination="bZU-e2-4UM" id="lPU-hP-bPf"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="zyE-JS-g2v" firstAttribute="top" secondItem="nog-bE-7P1" secondAttribute="bottom" constant="10" id="2Pg-ht-v9z"/>
+                            <constraint firstItem="Afg-r1-Llu" firstAttribute="leading" secondItem="sQG-93-ZNl" secondAttribute="leading" id="Bb8-va-F6R"/>
+                            <constraint firstItem="sQG-93-ZNl" firstAttribute="bottom" secondItem="zyE-JS-g2v" secondAttribute="bottom" id="E9w-wI-nxe"/>
+                            <constraint firstItem="Afg-r1-Llu" firstAttribute="top" secondItem="nog-bE-7P1" secondAttribute="bottom" constant="-70" id="Lkq-v8-Ul5"/>
+                            <constraint firstItem="zyE-JS-g2v" firstAttribute="leading" secondItem="sQG-93-ZNl" secondAttribute="leading" id="Q3q-j6-uoO"/>
+                            <constraint firstItem="sQG-93-ZNl" firstAttribute="trailing" secondItem="zyE-JS-g2v" secondAttribute="trailing" id="XaO-Bs-9Nn"/>
+                            <constraint firstItem="nog-bE-7P1" firstAttribute="top" secondItem="sQG-93-ZNl" secondAttribute="top" id="ZXy-0f-oam"/>
+                            <constraint firstItem="nog-bE-7P1" firstAttribute="leading" secondItem="sQG-93-ZNl" secondAttribute="leading" id="Zdq-xy-OBC"/>
+                            <constraint firstItem="sQG-93-ZNl" firstAttribute="trailing" secondItem="Afg-r1-Llu" secondAttribute="trailing" id="dar-lp-3fW"/>
+                            <constraint firstItem="sQG-93-ZNl" firstAttribute="bottom" secondItem="Afg-r1-Llu" secondAttribute="bottom" id="lyv-L6-AcM"/>
+                            <constraint firstItem="sQG-93-ZNl" firstAttribute="trailing" secondItem="nog-bE-7P1" secondAttribute="trailing" id="ydq-T1-VLS"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="sQG-93-ZNl"/>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="zyE-JS-g2v" id="Uk8-nI-kPH"/>
+                        <outlet property="nextButton" destination="PWv-AS-Urs" id="lEO-qt-OdQ"/>
+                        <outlet property="previousButton" destination="CVE-8K-5Us" id="EJI-aJ-eHU"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4Ox-2B-u2s" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="902.89855072463774" y="114.50892857142857"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="form_background" width="1900" height="782"/>
+        <image name="profileImage" width="306" height="331"/>
+    </resources>
 </document>
