--- a/FynzoSurvey/ViewControllers/Form/DropDownCollectionViewCell/DropDownCollectionViewCell.xib
+++ b/FynzoSurvey/ViewControllers/Form/DropDownCollectionViewCell/DropDownCollectionViewCell.xib
@@ -12,17 +12,17 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="StarCollectionViewCell" customModule="FynzoSurvey" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="DropDownCollectionViewCell" customModule="FynzoSurvey" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="v4y-yV-on6">
+                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="JJ7-jd-lLz">
                         <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <label key="tableHeaderView" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rate your dining experience as per the following aspects" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="6pj-Sg-Izu" customClass="FormBoldLabel" customModule="FynzoSurvey" customModuleProvider="target">
+                        <label key="tableHeaderView" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rate your dining experience as per the following aspects" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="QAc-wJ-f9h" customClass="FormBoldLabel" customModule="FynzoSurvey" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="0.0" width="200" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -30,25 +30,24 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <connections>
-                            <outlet property="dataSource" destination="gTV-IL-0wX" id="39y-ML-03W"/>
-                            <outlet property="delegate" destination="gTV-IL-0wX" id="Pfa-y9-V77"/>
+                            <outlet property="dataSource" destination="gTV-IL-0wX" id="isM-aH-kSD"/>
+                            <outlet property="delegate" destination="gTV-IL-0wX" id="XqZ-8R-Nd8"/>
                         </connections>
                     </tableView>
                 </subviews>
             </view>
-            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="v4y-yV-on6" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="AuZ-9c-31p"/>
-                <constraint firstAttribute="trailing" secondItem="v4y-yV-on6" secondAttribute="trailing" id="QCF-06-fc3"/>
-                <constraint firstItem="v4y-yV-on6" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="qSe-dT-4C7"/>
-                <constraint firstAttribute="bottom" secondItem="v4y-yV-on6" secondAttribute="bottom" id="xDO-ut-9gW"/>
+                <constraint firstItem="JJ7-jd-lLz" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="D1x-fM-sef"/>
+                <constraint firstAttribute="trailing" secondItem="JJ7-jd-lLz" secondAttribute="trailing" id="Dsv-Ul-JAj"/>
+                <constraint firstAttribute="bottom" secondItem="JJ7-jd-lLz" secondAttribute="bottom" id="pg9-0C-xMO"/>
+                <constraint firstItem="JJ7-jd-lLz" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="sY0-dv-DBF"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <connections>
-                <outlet property="label" destination="6pj-Sg-Izu" id="tLo-qn-e43"/>
-                <outlet property="tableView" destination="v4y-yV-on6" id="Zc4-hR-cH4"/>
+                <outlet property="label" destination="QAc-wJ-f9h" id="kNw-NZ-NzT"/>
+                <outlet property="tableView" destination="JJ7-jd-lLz" id="fqP-hm-V3v"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="96.428571428571431"/>
+            <point key="canvasLocation" x="140.57971014492756" y="87.723214285714278"/>
         </collectionViewCell>
     </objects>
 </document>
