--- a/FynzoSurvey/ViewControllers/Form/StarCollectionViewCell/StarTableViewCell.xib
+++ b/FynzoSurvey/ViewControllers/Form/StarCollectionViewCell/StarTableViewCell.xib
@@ -45,6 +45,9 @@
                             <userDefinedRuntimeAttribute type="color" keyPath="emptyColor">
                                 <color key="value" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="rating">
+                                <real key="value" value="0.0"/>
+                            </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </view>
                 </subviews>
